Fix portrait thumbnail: contain with black bg instead of cropping

--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@
   position: relative;
   padding-bottom: 56.25%;
   overflow: hidden;
+  background-color: black;
 }
 
 .tileImgPortrait{
@@ -80,7 +81,7 @@
   bottom: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
 }
 
